<resources>
    <string name="app_name" translatable="false">MacIndex</string>
    <string name="app_name_everymac" translatable="false">EveryMacIndex</string>
    <string name="information_specs_full">Tap on the top image to play startup and death sound</string>
    <string name="information_specs_no_death">Tap on the top image to play startup sound</string>
    <string name="information_specs_no_sound">This machine does not have startup or death sound</string>
    <string name="information_specs_view_image">Long press the top image to view the large image</string>
    <string name="information_specs_everymac">Tap below to access more specifications</string>
    <string name="information_specs_high_vol_warning">The current volume is too high. Do you want to proceed playing?\nSelect \"Confirm\" to turn this warning off temporarily.\nGo to preferences page to turn this function off.</string>
    <string name="information_first_lunch_title">Welcome to MacIndex</string>
    <string name="information_first_lunch">Open the drawer to navigate inside the application. Open the menu to access more options and get help.</string>
    <string name="information_double_press">Press the back button again to exit MacIndex</string>
    <string name="information_set_everymac">Open Directly in EveryMac is enabled. MacIndex will open the EveryMac Page of the machine directly instead of the Specification Page. If you want to disable this function, please access the Preferences Page.</string>
    <string name="setting_sort">Enhanced Sorting (Overall Categories/Search)</string>
    <string name="setting_sort_description">Sort by time again to ensure correct positions for machines not in the same category. Turn off can make the loading faster. This only affects Categories and Search Pages.</string>
    <string name="setting_sort_comment">Enhanced Sorting (Comments)</string>
    <string name="setting_sort_comment_description">Sort by time or sort by the order of addition. Turn off can make the loading faster. This only affects Comments Page.</string>
    <string name="setting_everymac">Open Directly in EveryMac</string>
    <string name="setting_everymac_description">Open the EveryMac Page of the machine directly instead of the Specification Page. Will ask for specific configuration if the machine has more than one configurations.</string>
    <string name="setting_everymac_warning_content">This is effective for both Main Page and Search Page. Some functions will no longer be available as well.</string>
    <string name="setting_deathsound">Enable Death Sound</string>
    <string name="setting_deathsound_deathsound_description">Play startup and death sound alternatively in the Specification Page, or play the startup sound only.</string>
    <string name="setting_high_vol_warning">High Volume Warning</string>
    <string name="setting_high_vol_warning_description">Enable high volume warning when using headphones in the Specification Page.</string>
    <string name="setting_navbuttons">Enable Navigation Buttons</string>
    <string name="setting_navbuttons_description">Enable buttons to navigate between machines in the Specification Page.</string>
    <string name="setting_quicknav">Fixed Navigation Range</string>
    <string name="setting_quicknav_description">Always override the navigation range to the belonged category.</string>
    <string name="setting_randomall">Limit Random Range</string>
    <string name="setting_randomall_description">Only pick random machines inside the current group instead of all categories.</string>
    <string name="setting_save_main">Save Usage in the Main Page</string>
    <string name="setting_save_main_description">Save the last selected viewing method and category filter.</string>
    <string name="setting_save_search">Save Usage in the Search Page</string>
    <string name="setting_save_search_description">Save the last used search keyword and filter.</string>
    <string name="setting_save_compare">Save Usage in the Comparison Page</string>
    <string name="setting_save_compare_description">Save the last selected machines and column.</string>
    <string name="setting_defaults_warning_content">Your saved preference file will be completely cleared, including your preferences and all usage records. After you confirm, MacIndex will quit. This is helpful for troubleshooting, but cannot be undone.</string>
    <string name="setting_defaults_cleared">Operation completed.</string>
    <string name="search_searchBy">Search By</string>
    <string-array name="search_Filters">
        <item>All Categories</item>
        <item>68K Macintosh</item>
        <item>PowerPC Macintosh</item>
        <item>Intel Macintosh</item>
        <item>ARM Macintosh</item>
    </string-array>
    <string-array name="search_Options">
        <item>Name (Partial Match)</item>
        <item>Model Numbers (Exact Match)</item>
        <item>Model Identifier (Exact Match)</item>
        <item>Gestalt ID (Exact Match)</item>
        <item>Part Numbers (Exact Match)</item>
        <item>EMC Numbers (Exact Match)</item>
    </string-array>
    <string-array name="search_Tips">
        <item>Example: MacBook Pro</item>
        <item>Example: A1150</item>
        <item>Example: MacBookPro1,1</item>
        <item>Example: 510</item>
        <item>Example: MA463</item>
        <item>Example: 2101</item>
    </string-array>
    <string name="search_length_title">Length Mismatch</string>
    <string name="search_length_name">The length allowed for name searching is less or equal to 50 characters. Please check your input.</string>
    <string name="search_length_model">The length of model number should be exactly 5. Please check your input.</string>
    <string name="search_length_ident">The length of model identifier should range between 5 and 14, inclusively. Please check your input.</string>
    <string name="search_length_gestalt">The length of gestalt ID should range between 1 and 3, inclusively. Please check your input.</string>
    <string name="search_length_order">The length of part number should range between 5 and 9, inclusively. Please check your input.</string>
    <string name="search_length_emc">The length of EMC number should range between 4 and 6, inclusively. Please check your input.</string>
    <string name="search_noResult">No result</string>
    <string name="search_found">Found&#160;</string>
    <string name="search_results">&#160;result(s)</string>
    <string name="search_prompt">Press return to start searching</string>
    <string name="search_illegal">Invalid Input</string>
    <string name="search_disable_identification">Old world Macintosh does not have a Model Identifier or EMC Numbers. Please use the Gestalt ID instead.</string>
    <string name="search_disable_gestalt">New world Macintosh does not have a Gestalt ID. Please use the Model Identifier instead.</string>
    <string name="menu_search">Search</string>
    <string name="menu_random">I\'m Feeling Lucky</string>
    <string name="menu_random_limited">&#160;(Limited)</string>
    <string name="menu_favourite">Favourites</string>
    <string name="menu_compare">Comparison</string>
    <string name="menu_comment">Custom Comments</string>
    <string name="menu_about_settings">Preferences</string>
    <string name="menu_about">About MacIndex</string>
    <string name="menu_view">View By</string>
    <string name="menu_view1">Product Categories</string>
    <string name="menu_view2">Processors</string>
    <string name="menu_view3">Introduction Years</string>
    <string name="menu_group">Categories Filter</string>
    <string name="menu_group0">All Categories</string>
    <string name="menu_group1" translatable="false">68K Macintosh</string>
    <string name="menu_group2" translatable="false">PowerPC Macintosh</string>
    <string name="menu_group3" translatable="false">Intel Macintosh</string>
    <string name="menu_group4" translatable="false">ARM Macintosh</string>
    <string name="menu">Main Menu</string>
    <string name="submenu_main_help">Main Page Help</string>
    <string name="submenu_specs_share">Share This Model</string>
    <string name="submenu_specs_favourite">Add to Favourite</string>
    <string name="submenu_specs_compare">Add to Comparison List</string>
    <string name="submenu_specs_comment">Edit Custom Comment</string>
    <string name="submenu_specs_help">Specifications Page Help</string>
    <string name="submenu_search_everymac">EveryMac Lookup</string>
    <string name="submenu_search_help">Search Page Help</string>
    <string name="submenu_favourite_add">Add New Folder</string>
    <string name="submenu_favourite_delete">Manage Folders</string>
    <string name="submenu_favourite_rename">Rename Folder</string>
    <string name="submenu_favourite_export">Export Folders</string>
    <string name="submenu_favourite_import">Import Folders</string>
    <string name="submenu_favourite_clear">Clear All Folders</string>
    <string name="submenu_favourite_help">Favourites Page Help</string>
    <string name="submenu_compare_manage">Manage Comparison List</string>
    <string name="submenu_compare_clear">Clear Comparison List</string>
    <string name="submenu_compare_help">Comparison Page Help</string>
    <string name="submenu_comments_delete">Manage Custom Comments</string>
    <string name="submenu_comments_export">Export Custom Comments</string>
    <string name="submenu_comments_import">Import Custom Comments</string>
    <string name="submenu_comments_clear">Clear All Custom Comments</string>
    <string name="submenu_comments_help">Custom Comments Page Help</string>
    <string name="submenu_prefs_benchmark">Benchmark</string>
    <string name="submenu_prefs_clear">Application Reset</string>
    <string name="submenu_prefs_help">Preferences Page Help</string>
    <string name="category0" translatable="false">Compact Macintosh</string>
    <string name="category1" translatable="false">Macintosh II</string>
    <string name="category2" translatable="false">Macintosh LC</string>
    <string name="category3" translatable="false">Macintosh Centris</string>
    <string name="category4" translatable="false">Macintosh Quadra</string>
    <string name="category5" translatable="false">Macintosh Performa</string>
    <string name="category6" translatable="false">Power Macintosh</string>
    <string name="category7" translatable="false">Power Mac G3/G4/G5</string>
    <string name="category8" translatable="false">iMac</string>
    <string name="category9" translatable="false">eMac</string>
    <string name="category10" translatable="false">Mac mini</string>
    <string name="category11" translatable="false">PowerBook</string>
    <string name="category12" translatable="false">PowerBook Duo</string>
    <string name="category13" translatable="false">PowerBook G3/G4</string>
    <string name="category14" translatable="false">iBook</string>
    <string name="year">Introduction</string>
    <string name="model">Model Numbers</string>
    <string name="id">Model Identifier</string>
    <string name="gestalt">Gestalt ID</string>
    <string name="order">Part Numbers</string>
    <string name="emc">EMC Numbers</string>
    <string name="processor">Processor</string>
    <string name="graphics">Graphics &amp; Display</string>
    <string name="type">ROM Information</string>
    <string name="maxram">RAM Information</string>
    <string name="software">Software Support</string>
    <string name="storage">Storage</string>
    <string name="bus_expansion">Feature &amp; Expansion</string>
    <string name="design">Design</string>
    <string name="support">Support Status</string>
    <string name="benchmark_warning">This will take a while and will evaluate the performance of your device of using MacIndex.</string>
</resources>